--- a/index.html
+++ b/index.html
@@ -24,35 +24,39 @@
     <form>
       <div class="upload-container">
         Upload Avatar
-        <button class="upload-button">
+        <button type="button" class="upload-button">
           <img src="assets/images/icon-upload.svg" alt="upload">
           Drag and drop or click to upload
         </button>
 
         <span>
-          <img src="assets/images/icon-info.svg" alt="">
+          <img src="assets/images/icon-info.svg" alt="icon-info">
           Upload your photo (JPG or PNG, max size: 500KB).
         </span>
       </div>
 
       <label>
         Full Name
-        <input type="text">
+        <input type="text" name="full_name">
       </label>
 
       <label>
         Email Address
-        <input type="text" placeholder="example@email.com">
+        <input type="text" name="email" placeholder="example@email.com">
+        <span class="form-error hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16"><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M2 8a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"/><path fill="#D1D0D5" d="M8.004 10.462V7.596ZM8 5.57v-.042Z"/><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M8.004 10.462V7.596M8 5.569v-.042"/></svg>
+          <span class="error-text"></span>
+        </span>
       </label>
     
       <label>
         GitHub Username
-        <input type="text" placeholder="@yourusername">
+        <input type="text" name="username" placeholder="@yourusername">
       </label>
     
       <button type="submit">Generate My Ticket</button>
     </form>
   </main>
-
+  <script src="app.js" type="module"></script>
 </body>
 </html>
