--- a/index.html
+++ b/index.html
@@ -10,36 +10,46 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
   <header>
     <img src="assets/images/logo-full.svg" alt="logo">
+    <div class="title">
+      <h1>Your Journey to Coding Conf 2025 Starts Here!</h1>
+      <h2>Secure your spot at next year's biggest coding conference.</h2>
+    </div>
+
+    <div class="title hidden">
+      <h1>
+        Congrats, <span id="fullname">Jonatan Kristof!</span>! Your ticket is ready.
+      </h1>
+      <h2>
+        We've emailed your ticket to <span id="email">jonata-email@gmail.com</span> and will send updates in the run up to the event
+      </h2>
+    </div>
   </header>
   
   <main>
-    <header class="main-header">
-      <h1>Your Journey to Coding Conf 2025 Starts Here!</h1>
-      <h2>Secure your spot at next year's biggest coding conference.</h2>
-    </header>
-
     <form>
       <div class="upload-container">
         Upload Avatar
-        <input type="file" id="file-input" class="hidden" accept="image/*">
-        <button type="button" class="upload-button">
-          <img src="assets/images/icon-upload.svg" alt="upload">
-          Drag and drop or click to upload
-        </button> 
+        <input type="file" id="file-input" class="hidden" accept="image/*" name="avatar">
+        <div class="upload-button">
+          <img id="avatar-preview" src="assets/images/icon-upload.svg" alt="upload">
+          <div class="options hidden">
+            <button type="button" id="remove-btn">Remove image</button>
+            <button type="button" id="change-btn">Change image</button>
+          </div>
+          <span>Drag and drop or click to upload</span>
+        </div> 
 
         <span class="info">
-          <img src="assets/images/icon-info.svg" alt="icon-info">
-          Upload your photo (JPG or PNG, max size: 500KB).
-          <span class="error-text hidden"></span>
-        </span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16"><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M2 8a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"/><path fill="#D1D0D5" d="M8.004 10.462V7.596ZM8 5.57v-.042Z"/><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M8.004 10.462V7.596M8 5.569v-.042"/></svg>
+          <span class="text">Upload your photo (JPG or PNG, max size: 500KB).</span>
+        </span> 
       </div>
 
       <label>
         Full Name
-        <input type="text" name="full_name">
+        <input type="text" name="full_name" autofocus>
       </label>
 
       <label>
@@ -47,7 +57,7 @@
         <input type="text" name="email" placeholder="example@email.com">
         <span class="info error hidden">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16"><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M2 8a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"/><path fill="#D1D0D5" d="M8.004 10.462V7.596ZM8 5.57v-.042Z"/><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M8.004 10.462V7.596M8 5.569v-.042"/></svg>
-          <span class="error-text"></span>
+          <span class="text"></span>
         </span>
       </label>
     
@@ -59,6 +69,37 @@
       <button type="submit">Generate My Ticket</button>
     </form>
   </main>
+
+  <section class="ticket-confirmation hidden" id="ticket-confirmation">
+    <div class="ticket-container">
+      <div class="ticket">
+        <div class="ticket-left">
+          <div class="ticket-card-header">
+            <img src="assets/images/logo-mark.svg" alt="logo">
+            <div class="ticket-title">
+              <h3 class="">Coding Conf</h3>
+              <span id="ticket-date-location">Jan 31, 2025 / Austin, TX</span>
+            </div>          
+          </div>
+    
+          <div class="ticket-card-content">
+            <img class="ticket-avatar" id="user-avatar" src="assets/images/image-avatar.jpg" alt="avatar">
+            <div class="user-info">
+              <h3 id="user-fullname">Jonatan Kristof</h3>
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="23" fill="none" viewBox="0 0 22 23"><path fill="#D1D0D5" fill-rule="evenodd" d="M13.022 15.221c.08.268.11.55.088.833l.002.44a.66.66 0 0 1-1.32 0v-.492c.025-.336-.074-.61-.276-.821a.66.66 0 0 1 .405-1.112c1.536-.17 2.559-.704 2.559-2.763 0-.515-.196-1.004-.55-1.375a.66.66 0 0 1-.142-.687c.108-.29.14-.598.096-.897-.225.076-.578.233-1.064.559a.66.66 0 0 1-.542.088 5.81 5.81 0 0 0-3.071 0 .66.66 0 0 1-.543-.088c-.48-.322-.831-.48-1.064-.556-.043.299-.01.606.096.895a.66.66 0 0 1-.14.684c-.359.377-.554.87-.551 1.39 0 2.032 1.027 2.576 2.568 2.768a.66.66 0 0 1 .394 1.112.992.992 0 0 0-.276.756l.001.475c0 .29-.192.549-.47.632a4.082 4.082 0 0 1-1.164.189c-1.22 0-1.799-.735-2.177-1.216-.157-.199-.319-.404-.43-.43a.66.66 0 0 1 .32-1.282c.55.137.867.54 1.147.895.377.478.64.817 1.449.691a2.174 2.174 0 0 1 .096-.683c-1.18-.31-2.778-1.177-2.778-3.904a3.296 3.296 0 0 1 .659-2 3.125 3.125 0 0 1 .17-1.948A.661.661 0 0 1 6.936 7c.192-.058.899-.166 2.214.648a7.105 7.105 0 0 1 3.186 0c1.315-.813 2.021-.704 2.213-.648a.66.66 0 0 1 .42.373c.267.62.325 1.3.172 1.949.428.57.66 1.26.66 1.984 0 2.76-1.596 3.617-2.778 3.915Zm1.252-11.853H6.846c-2.912 0-4.866 2.05-4.866 5.086v6.987c0 3.045 1.954 5.087 4.866 5.087h7.428c2.912 0 4.866-2.042 4.866-5.087V8.454c0-3.036-1.954-5.086-4.866-5.086Z" clip-rule="evenodd"/></svg>
+                <span id="user-github">@jonatankristof0101</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="ticket-right">
+          <span id="code">#01609</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="app.js" type="module"></script>
 </body>
 </html>
