--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="upload-container">
         Upload Avatar
         <input type="file" id="file-input" class="hidden" accept="image/*" name="avatar">
-        <div class="upload-button">
+        <div class="upload-button" tabindex="0" aria-label="Upload avatar">
           <img id="avatar-preview" src="assets/images/icon-upload.svg" alt="upload">
           <div class="options hidden">
             <button type="button" id="remove-btn">Remove image</button>
@@ -41,29 +41,37 @@
           <span>Drag and drop or click to upload</span>
         </div> 
 
-        <span class="info">
+        <div class="info">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16"><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M2 8a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"/><path fill="#D1D0D5" d="M8.004 10.462V7.596ZM8 5.57v-.042Z"/><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M8.004 10.462V7.596M8 5.569v-.042"/></svg>
           <span class="text">Upload your photo (JPG or PNG, max size: 500KB).</span>
-        </span> 
+        </div> 
       </div>
 
       <label>
         Full Name
-        <input type="text" name="full_name" autofocus>
+        <input type="text" name="full_name" placeholder="John Doe">
+        <div class="info error hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16"><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M2 8a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"/><path fill="#D1D0D5" d="M8.004 10.462V7.596ZM8 5.57v-.042Z"/><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M8.004 10.462V7.596M8 5.569v-.042"/></svg>
+          <span class="text"></span>
+        </div>
       </label>
 
       <label>
         Email Address
         <input type="text" name="email" placeholder="example@email.com">
-        <span class="info error hidden">
+        <div class="info error hidden">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16"><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M2 8a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"/><path fill="#D1D0D5" d="M8.004 10.462V7.596ZM8 5.57v-.042Z"/><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M8.004 10.462V7.596M8 5.569v-.042"/></svg>
           <span class="text"></span>
-        </span>
+        </div>
       </label>
     
       <label>
         GitHub Username
         <input type="text" name="username" placeholder="@yourusername">
+        <div class="info error hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16"><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M2 8a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"/><path fill="#D1D0D5" d="M8.004 10.462V7.596ZM8 5.57v-.042Z"/><path stroke="#D1D0D5" stroke-linecap="round" stroke-linejoin="round" d="M8.004 10.462V7.596M8 5.569v-.042"/></svg>
+          <span class="text"></span>
+        </div>
       </label>
     
       <button type="submit">Generate My Ticket</button>
